Fix PDF rendering spacing (removing bottom margin from last page)
#1

--- a/assets/phb-previewSpecific.css
+++ b/assets/phb-previewSpecific.css
@@ -32,3 +32,7 @@ body {
 div.classTable tr {
     padding: 0;
 }
+
+.phb:not(:last-child) {
+    margin-bottom: 30px;
+}
